--- a/ipu/templates/student/mysessions.html
+++ b/ipu/templates/student/mysessions.html
@@ -17,6 +17,6 @@
 	{% endfor %}
 </ul>
 {% else %}
-	<p style="font-size: 20px" class="col s12 m10 offset-m1 flow-text blue lighten-5 blue-text text-darken-4 center-align">All your placement sessions/drives, Internship or Job, that you apply for, will be displayed here once their application deadline is over.<br>Being in a session means that you are a part of that placement drive.<br><b>Note: </b>If your participation in a session/drive gets over, you'll no longer see that session.</p>
+	<p style="font-size: 20px" class="col s12 m10 offset-m1 flow-text blue lighten-5 blue-text text-darken-4 center-align">All your placement sessions/drives, Internship or Job, that you apply for, will be displayed here.<br>Being in a session means that you are a part of that placement drive.<br><b>Note: </b>If your participation in a session/drive gets over, you'll no longer see that session.</p>
 	<p class="col s12 center flow-text teal-text text-accent-4">You are currently not enrolled in any sessions.</p>
 {% endif %}
