Notification detail and session emails handled.

--- a/ipu/templates/college/home.html
+++ b/ipu/templates/college/home.html
@@ -261,7 +261,7 @@
 	<script type="text/javascript" src="{% static 'common/search.js' %}"></script>
 	<script type="text/javascript" src="{% static 'common/sessions.js' %}"></script>
 	<script type="text/javascript" src="{% static 'common/settings.js' %}"></script>
-	<script type="text/javascript" src="{% static 'notification/college.js' %}"></script>
+	<script type="text/javascript" src="{% static 'notification/college.js' %}?ver=1"></script>
 	<script type="text/javascript" src="{% static 'recruitment/associate.js' %}"></script>
 	<script type="text/javascript" src="{% static 'recruitment/requests.js' %}"></script>
 	<script type="text/javascript" src="{% static 'common/mobile.js' %}"></script>
