Complete session notify flow

--- a/ipu/templates/college/home.html
+++ b/ipu/templates/college/home.html
@@ -259,7 +259,7 @@
 
 {% block scripts %}
 	<script type="text/javascript" src="{% static 'common/search.js' %}"></script>
-	<script type="text/javascript" src="{% static 'common/sessions.js' %}"></script>
+	<script type="text/javascript" src="{% static 'common/sessions.js' %}?ver=1"></script>
 	<script type="text/javascript" src="{% static 'common/settings.js' %}"></script>
 	<script type="text/javascript" src="{% static 'notification/college.js' %}?ver=1"></script>
 	<script type="text/javascript" src="{% static 'recruitment/associate.js' %}"></script>
