--- a/ipu/templates/faculty/home.html
+++ b/ipu/templates/faculty/home.html
@@ -346,7 +346,7 @@
 
 {% block scripts %}
 	<script type="text/javascript" src="{% static 'common/search.js' %}"></script>
-	<script type="text/javascript" src="{% static 'common/sessions.js' %}"></script>
+	<script type="text/javascript" src="{% static 'common/sessions.js' %}?ver=1"></script>
 	<script type="text/javascript" src="{% static 'common/settings.js' %}"></script>
 	<script type="text/javascript" src="{% static 'notification/faculty.js' %}?ver=1"></script>
 	<script type="text/javascript" src="{% static 'faculty/verify.js' %}?ver=2"></script>
