--- a/ipu/templates/dummy_company/dcompanies_in_my_college.html
+++ b/ipu/templates/dummy_company/dcompanies_in_my_college.html
@@ -11,6 +11,7 @@
 				</span>
 				<h6>{{ htmlid|slice:":-1"|title }} offering <b>&#8377;{{ enrolled.salary }} LPA</b></h6>
 				<p><b>{{ e.date|timeuntil }}</b> left to withdraw application</p>
+				<p><b>Year{{ enrolled.selection_criteria.years|length|pluralize }}: </b> {{ enrolled.selection_criteria.years }}</p>
 			</div>
 			<div class="card-action">
 				<a class="change-enrollment" data-timeleft="{{ e.date|timeuntil }}" href="{% url 'applyd' e.dsessid %}">Withdraw Application</a>
@@ -43,6 +44,7 @@
 				</span>
 				<h6>{{ htmlid|slice:":-1"|title }} offering <b>&#8377;{{ unenrolled.salary }} LPA</b></h6>
 				<p><b>{{ u.date|timeuntil }}</b> left to apply</p>
+				<p><b>Year{{ unenrolled.selection_criteria.years|length|pluralize }}: </b> {{ unenrolled.selection_criteria.years }}</p>
 			</div>
 			<div class="card-action">
 				<a class="change-enrollment" data-timeleft="{{ u.date|timeuntil }}" href="{% url 'applyd' u.dsessid %}">Apply</a>
