--- a/ipu/templates/student/companies_in_my_college.html
+++ b/ipu/templates/student/companies_in_my_college.html
@@ -22,6 +22,8 @@
 							</span>
 							<h6>{{ htmlid|slice:":-1"|title }} offering <b>&#8377;{{ enrolled.salary }} LPA</b></h6>
 							<p><b class="timeleft">{{ e.date|timeuntil }}</b> left to withdraw application</p>
+							<!--<p><b>Programme:</b> {{ enrolled.programme }}</p>-->
+							<p><b>Year{{ enrolled.session.selection_criteria.years|length|pluralize }}: </b> {{ enrolled.session.selection_criteria.years }}</p>
 						</div>
 						<div class="card-action">
 							<a class="change-enrollment" data-timeleft="{{ e.date|timeuntil }}" href="{% url 'apply' e.sessid %}">Withdraw Application</a>
@@ -70,6 +72,7 @@
 							</span>
 							<h6>{{ htmlid|slice:":-1"|title }} offering <b>&#8377;{{ unenrolled.salary }} LPA</b></h6>
 							<p><b>{{ u.date|timeuntil }}</b> left to apply</p>
+							<p><b>Year{{ unenrolled.session.selection_criteria.years|length|pluralize }}: </b> {{ unenrolled.session.selection_criteria.years }}</p>
 						</div>
 						<div class="card-action">
 							<a class="change-enrollment" data-timeleft="{{ u.date|timeuntil }}" href="{% url 'apply' u.sessid %}">Apply</a>
