--- a/ipu/templates/student/home.html
+++ b/ipu/templates/student/home.html
@@ -104,7 +104,7 @@
 	{% endif %}
 -->
 	<li id="m-apply" data-main_div="#companies"><a class="waves-effect" href="#!"><i class="fa fa-building" aria-hidden="true"></i>Companies Visiting</a></li>
-	<li id="m-session" data-main_div="#sessions_div"><a class="waves-effect" href="#!"><i class="fa fa-clock-o" aria-hidden="true"></i> Sessions</a></li>
+	<li id="m-session" data-main_div="#sessions_div"><a class="waves-effect" href="#!"><i class="fa fa-clock-o" aria-hidden="true"></i> My Sessions</a></li>
 <!--	<li id="m-notification" data-main_div="#notifications">
 		<a class="waves-effect" href="#!"><i class="fa fa-bell" aria-hidden="true"></i>Notifications{% if badge %}<span class="new badge">{{ badge }}</span>{% endif %}</a>
 	</li>-->
@@ -158,7 +158,7 @@
 	<li id="apply" class="tab col s2"><a class="active" href="#companies">Companies Visiting</a></li>
 <!--	<li class="tab col s2"><a href="#tab2">Status</a></li> -->
 	<li id = "notification" class="tab col s2" url="{% url 'submit_issue' %}"><a href="#notifications">Notification</a></li>
-	<li id="session" class="tab col s2"><a href="#sessions_div">Sessions</a></li>
+	<li id="session" class="tab col s2"><a href="#sessions_div">My Sessions</a></li>
 	<li class="tab col s2"><a href="#settings">Settings</a></li>
 {% endblock %}
 
