--- a/ipu/templates/account/set_password.html
+++ b/ipu/templates/account/set_password.html
@@ -12,20 +12,16 @@
 			</div>
 		</div>
 	{% else %}
-		{% if not validlink %}
-			<h3 class="center flow-text red-text"> The reset password link is invalid.</h3>
-			<p class="center flow-text blue-text">If you're viewing this page after clicking the reset link sent to your registered email address, then chances are that the reset link has expired.<br>Please try resetting again by clicking <b><a href="{% url 'forgot_password' %}">here</a></p></b>
-		{% else %}
 		<div id="password-reset-form-div" class="row" style="min-height: 477px;">
 			<h4 class="col s12 m10 offset-m1 l8 offset-l2">Set Password</h4>
-			<form class="col s12 m10 offset-m1" action="{% url 'reset_password' user_hashid=user_hashid token=token %}" method='POST' id="password-reset-form">
+			<p class="red-text col s10 offset-s1">Make sure that password is a combination of alphabets, digits and special characters and is at least 8 characters long.</p>
+			<form class="col s12 m10 offset-m1" action="{# url 'reset_password' user_hashid=user_hashid token=token #}" method='POST' id="password-reset-form">
 				{% csrf_token %}
 				{% form form=password_reset_form %}{% endform %}
-				<div class="col s12">
-					<button type="submit" name="resetpassword" class="btn btn-waves-light col s8 offset-s2" style="width: 80%">Reset Password</button>
+				<div class="row">
+					<button type="submit" name="resetpassword" class="btn btn-waves-light col s10 offset-s1">Reset Password</button>
 				</div>
 			</form>
 		</div>
-		{% endif %}
 	{% endif %}
 {% endblock %}
