Add ver to college js files

--- a/ipu/templates/college/home.html
+++ b/ipu/templates/college/home.html
@@ -258,14 +258,14 @@
 {% endblock %}
 
 {% block scripts %}
-	<script type="text/javascript" src="{% static 'common/search.js' %}"></script>
+	<script type="text/javascript" src="{% static 'common/search.js' %}?ver=1"></script>
 	<script type="text/javascript" src="{% static 'common/sessions.js' %}?ver=3"></script>
-	<script type="text/javascript" src="{% static 'common/settings.js' %}"></script>
+	<script type="text/javascript" src="{% static 'common/settings.js' %}?ver=1"></script>
 	<script type="text/javascript" src="{% static 'notification/college.js' %}?ver=1"></script>
-	<script type="text/javascript" src="{% static 'recruitment/associate.js' %}"></script>
-	<script type="text/javascript" src="{% static 'recruitment/requests.js' %}"></script>
-	<script type="text/javascript" src="{% static 'common/mobile.js' %}"></script>
-	<script type="text/javascript" src="{% static 'download/download.js' %}"></script>
+	<script type="text/javascript" src="{% static 'recruitment/associate.js' %}?ver=1"></script>
+	<script type="text/javascript" src="{% static 'recruitment/requests.js' %}?ver=1"></script>
+	<script type="text/javascript" src="{% static 'common/mobile.js' %}?ver=1"></script>
+	<script type="text/javascript" src="{% static 'download/download.js' %}?ver=1"></script>
 	<script src="{% static 'sweetalert/dist/sweetalert.min.js' %}"></script>
 	<script>
 		$(document).ready(function() {
