--- a/ipu/templates/college/dsessions_snippet.html
+++ b/ipu/templates/college/dsessions_snippet.html
@@ -8,6 +8,7 @@
 				<p><b>Programme: </b>{{ dsession.programme }}</p>
 				<p><b>Streams: </b>{{ dsession.streams }}</p>
 				<p><b>Years: </b>{{ dsession.years }}</p>
+				<p><b>Ended: </b>{{ dsession.dsessobj.ended|yesno:"Yes,No,Maybe" }}
 				<p><b><span class="orange-text text-darken-2">{{ dsession.students }}</span></b> student{{ dsession.students|pluralize }} in the session</p>
 				<span class="secondary-content">
 					{% if request.user.type == 'C' or request.user.type == 'F' and perms.recruitment.handle_placement %}
