Add Version number

--- a/ipu/templates/company/home.html
+++ b/ipu/templates/company/home.html
@@ -221,7 +221,7 @@
 	<script type="text/javascript" src="{% static 'recruitment/associate.js' %}"></script>
 	<script type="text/javascript" src="{% static 'common/mobile.js' %}"></script>
 	<script type="text/javascript" src="{% static 'download/download.js' %}"></script>
-	<script type="text/javascript" src="{% static 'notification/company.js' %}"></script>
+	<script type="text/javascript" src="{% static 'notification/company.js' %}?ver=1"></script>
 	<script src="{% static 'sweetalert/dist/sweetalert.min.js' %}"></script>
 	<script>
 		$(document).ready(function() {
