--- a/ipu/templates/student/home.html
+++ b/ipu/templates/student/home.html
@@ -59,7 +59,7 @@
  {% block lightbox_data2 %}
         <div id="light4" class="white_content4">
         {% if student.resume %}
-            <iframe id="iframepdf" src="{{ student.resume.url }}" width="auto" height="1200px"/></iframe>
+            <iframe id="iframepdf" src="#!" width="auto" height="1200px"/></iframe>
         {% endif %}    
             <a href = "javascript:void(0)" onclick = "document.getElementById('light4').style.display='none'; document.getElementById('fade4').style.display='none'; "><i class="fa fa-times fa-2x"></i></a>
         </div>
@@ -69,11 +69,12 @@
 
 {% block menu_icon_dropdown %}
 <!--	<li><a href = "javascript:void(0)" onclick = "document.getElementById('light3').style.display='flex';document.getElementById('fade3').style.display='flex'">Contact College</a></li>-->
-    <li class="divider"></li>
-    {% if student.resume %}
+    {# if student.resume #}
+    <!--
     <li><a href = "javascript:void(0)" onclick = "document.getElementById('light4').style.display='flex';document.getElementById('fade4').style.display='flex'">Uploaded resume</a></li>
-    {% endif %}
     <li class="divider"></li>
+	-->
+    {# endif #}
 	<li><a id="report-form-anchor" href="{% url 'report' %}">Contact Admin</a></li>
 {% endblock %}
 
@@ -138,10 +139,12 @@
 			</li>
 		</ul>
 	</li>
-    <li><div class="divider"></div></li>
-    {% if student.resume %}
+    {# if student.resume #}
+		<!--
+    	<li><div class="divider"></div></li>
 	    <li><a href="javascript:void(0)" onclick="document.getElementById('light4').style.display='flex';document.getElementById('fade4').style.display='flex'">View Resume</a></li>
-    {% endif %}
+		-->
+    {# endif #}
 <!--	<li><a href="javascript:void(0)" onclick="document.getElementById('light3').style.display='flex';document.getElementById('fade3').style.display='flex'">Contact College</a></li>-->
 	<li data-main_div="#!"><a class="waves-effect" id="m-report-form-anchor" href="{% url 'report' %}">Contact Admin</a></li>
 {% endblock %}
