Change get_noti retrieval to reverse_lookup; Remove seagreen

--- a/ipu/templates/dummy_company/dcompanies_in_my_college.html
+++ b/ipu/templates/dummy_company/dcompanies_in_my_college.html
@@ -2,7 +2,7 @@
 	{% with e.dsess as enrolled %}
 		<div class="card sticky-action">
 			<div class="card-image waves-effect waves-block waves-light">
-				<img class="activator" height=250 width=250 src="#" style="background-color:{% cycle 'cornflowerblue' 'goldenrod' 'lightcoral' 'seagreen' %}" />
+				<img class="activator" height=250 width=250 src="#" style="background-color:{% cycle 'cornflowerblue' 'goldenrod' 'lightcoral' %}" />
 			</div>
 			<div class="card-content">
 				<span class="card-title activator grey-text text-darken-4">
@@ -35,7 +35,7 @@
 	{% with u.dsess as unenrolled %}
 		<div class="card sticky-action">
 			<div class="card-image waves-effect waves-block waves-light">
-				<img class="activator" height=250 width=250 src="#" style="background-color:{% cycle 'lightcoral' 'goldenrod' 'cornflowerblue' 'seagreen' %}" />
+				<img class="activator" height=250 width=250 src="#" style="background-color:{% cycle 'lightcoral' 'goldenrod' 'cornflowerblue' %}" />
 			</div>
 			<div class="card-content">
 				<span class="card-title activator grey-text text-darken-4">
