--- a/ipu/templates/faculty/verify.html
+++ b/ipu/templates/faculty/verify.html
@@ -50,7 +50,7 @@
 {% endblock %}
 
 {% block scripts %}
-<script type="text/javascript" src="{% static 'faculty/verify.js' %}"></script>
+<script type="text/javascript" src="{% static 'faculty/verify.js' %}?ver=1"></script>
 <script>
 		$(document).ready(function() {
 			VerifyStu.init();
